[FIX] list double scroll

--- a/frontend/src/components/ViewWrapper/ViewWrapper.module.css
+++ b/frontend/src/components/ViewWrapper/ViewWrapper.module.css
@@ -17,3 +17,8 @@
   flex: 1;
   overflow: auto;
 }
+
+.content:has(:global(.mantine-datatable)) {
+  flex: 1;
+  overflow: hidden;
+}
